*backuppc-3.1.0-r2 (27 Feb 2010)

  27 Feb 2010; <lenno@gentoo.org> -backuppc-3.1.0-r1.ebuild,
  +backuppc-3.1.0-r2.ebuild, files/httpd.conf:
  Updated the SSL certificate/key paths in httpd.conf to point to
  /etc/ssl/apache2
