@@ -3,10 +3,11 @@ AUX 02-fix-config.pl-formatting.patch 23106 RMD160 4ef821db3c34416badc8efedd1426
 AUX 03-reasonable-config.pl-defaults.patch 1168 RMD160 46321a71c0b3f4c0a49c82fc923edbb82e48e218 SHA1 ef26ef0d3c7c5e91576a22f751747a5e31308496 SHA256 437e7606387e5142550d25aadd1358a2995ef7da1b6d19f66e423a8ad50d51f4
 AUX 04-add-docdir-marker.patch 470 RMD160 c077c32a5de7600d0906742510be5bc4612a0d50 SHA1 1117a29c10c00f4456f658be131b4d5c9e31f617 SHA256 9236caf66f1d5cd607ced53173cd127d49bfacb08212e93e0beff37ad80cc4bb
 AUX 05-nicelevel.patch 756 RMD160 a26c588c0936f2d3f129aed4c5bbfbada3fef075 SHA1 e1db6fc9c2f450df08162218cb3680da407f3d47 SHA256 a707a592754fadc92a769a488518b355468afa8d57a280e29adff4e8c4384566
-AUX apache2-backuppc.conf 3057 RMD160 c9ad1329302296cc1cbce8c0d48989719872da65 SHA1 36d95931bb6dff59712b7511bf34b6b18486fa11 SHA256 7d832145226cc64386338001709e7fa9da9073b0788d6bf31f25b7d1b4e95a4b
+AUX apache2-backuppc.conf 3047 RMD160 dadd7e4165c5cc25ed2e38b42fbff4ebe8adf35d SHA1 00208a39fd0237a29000517b1c4d64ba3924cc9e SHA256 68204bd1f4e0ce88b1e883f5ca3a46abaeb07ec84b9a92030ab40c8d4af817e8
 AUX apache2-backuppc.init 3800 RMD160 9a4a4c55671738447ef131480ca41506baf947b8 SHA1 6ffef133a0b523e4e0d428b8a5282632303d61a2 SHA256 a8b29805a82315f47e0b8e8583c530ba0e4c0b0393001bed4cd2759c2a0c6bb9
 AUX httpd.conf 11857 RMD160 f2eac3a1f88cc5ac7420d33dc4c6e61e7aa49357 SHA1 ce6c673ac2ce5ed11bc640fcc8b50cadbf6d78ca SHA256 20a5e1b7c9c0ccd0627a72c9bc8b4b6febcecf8912a990516373ea5899d33d9c
 DIST BackupPC-3.1.0.tar.gz 474981 RMD160 22d4cb6dd76f846fde489a301852f50e8db1ae1d SHA1 3bd6d637f4f08f2fda44a12668b91d47c4abb0a7 SHA256 49a2744cb9aaf27b298ec3d2e83e46fdb86fb3596922beb3904cb6ae552c148a
 EBUILD backuppc-3.1.0-r2.ebuild 6027 RMD160 59020073b4d7b192dfca2b550ec0f7a3f77df986 SHA1 0f60f08982fdc942360b36e2222f054abff94422 SHA256 8f67e700d80af0654e4e8b79c494cd03afa2ff3d47f7b4f7a07ae44ad92dce81
-MISC ChangeLog 228 RMD160 011727c5e4b5e3c01af5bbfbdaa47373da5ec0c8 SHA1 44be7cd2d4f0ed9f98c9fcb640f37e2067f5b6cf SHA256 7f50b18c97761a7b351b4dc360f87ecbde63952946c9304c91c7b817b8834f89
+EBUILD backuppc-3.1.0-r3.ebuild 6019 RMD160 f83765d40e4e228abcaf43f244be9ddf3ab2c435 SHA1 94aee0e7fa8afa175b2a223664b132c89b078c8a SHA256 7679f61467e4faa56c59155d65b8f7da8fafc5e64959d61cf271a0cf7a5607b2
+MISC ChangeLog 530 RMD160 82e7b4ab2a7853c1ab0952440c2bcb4453f37621 SHA1 88116b39860e9314bc20be2110871a51fcbbe22a SHA256 6c316b00ea710ee046a65e1ae454f323553b9dc696cfb512cae61f6a8218731b
 MISC metadata.xml 505 RMD160 080f7450920b9079a7436a05fb03c1a626c938fc SHA1 d42059212c110b63ee0590a3cc50c86adea635f4 SHA256 2c461cd601ed00f142b5994f2998df2308a47f79c46c1016e83b4109fb9d044e
