@@ -32,7 +32,7 @@
 #  SSL_DEFAULT_VHOST  Enables default vhost for SSL (you should enable this
 #                     when you enable SSL)
 #
-APACHE2_OPTS="-D LANGUAGE -D SUEXEC -D PERL -D BACKUPPC_VHOST"
+APACHE2_OPTS="-D LANGUAGE -D PERL -D BACKUPPC_VHOST"
 
 # Extended options for advanced uses of Apache ONLY
 # You don't need to edit these unless you are doing crazy Apache stuff
