@@ -1,3 +1,12 @@
+# ChangeLog for app-backup/backuppc
+
+*backuppc-3.1.0-r3 (08 Apr 2010)
+
+  08 Apr 2010; <lenno@gentoo.org> files/apache2-backuppc.conf,
+  +backuppc-3.1.0-r3.ebuild:
+  Removing suexec dependency, since the functionality isn't actually used.
+  Thanks to Daniel Biro <danman@danman.hu> for reporting this!
+
 *backuppc-3.1.0-r2 (27 Feb 2010)
 
   27 Feb 2010; <lenno@gentoo.org> -backuppc-3.1.0-r1.ebuild,
